objects/MasterdataRecordTypePicklist__mdt.object
<CustomObject>
    <fields>
        <fullName>ControlingFieldFilter__c</fullName>
        <label>Controling Field Filter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldFilter__c</fullName>
        <label>Field Filter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasterdataCustomPicklist__c</fullName>
        <label>Masterdata Custom Picklist</label>
        <referenceTo>MasterdataCustomPicklist__mdt</referenceTo>
        <relationshipName>Masterdata_Recort_Type_Picklist</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Masterdata Record Type Picklist</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>IsActive__c</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Masterdata Record Type Picklist</pluralLabel>
</CustomObject>